--- a/index.ipynb
+++ b/index.ipynb
@@ -35,11 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load required libraries\n"
+    "# Load required libraries\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import statsmodels as sm"
    ]
   },
   {
@@ -56,9 +59,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>co2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1958-03-29</th>\n",
+       "      <td>316.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-04-05</th>\n",
+       "      <td>317.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-04-12</th>\n",
+       "      <td>317.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-04-19</th>\n",
+       "      <td>317.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-04-26</th>\n",
+       "      <td>316.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              co2\n",
+       "date             \n",
+       "1958-03-29  316.1\n",
+       "1958-04-05  317.3\n",
+       "1958-04-12  317.6\n",
+       "1958-04-19  317.5\n",
+       "1958-04-26  316.4"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "# Load the \"co2\" dataset from sm.datasets\n",
@@ -83,14 +154,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "float64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "date\n",
+       "1958-03-29    316.1\n",
+       "1958-04-05    317.3\n",
+       "1958-04-12    317.6\n",
+       "1958-04-19    317.5\n",
+       "1958-04-26    316.4\n",
+       "1958-05-03    316.9\n",
+       "1958-05-10      NaN\n",
+       "1958-05-17    317.5\n",
+       "1958-05-24    317.9\n",
+       "1958-05-31      NaN\n",
+       "1958-06-07      NaN\n",
+       "1958-06-14      NaN\n",
+       "1958-06-21      NaN\n",
+       "1958-06-28      NaN\n",
+       "1958-07-05    315.8\n",
+       "Freq: W-SAT, Name: co2, dtype: float64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Print the datatype of CO2 and check first 15 values\n",
-    "\n",
+    "print(CO2.co2.dtype)\n",
+    "CO2.co2.head(15)\n",
     "# datatype of CO2 is <class 'pandas.core.frame.DataFrame'>\n",
     "\n",
     "#               co2\n",
@@ -126,12 +232,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['1958-03-29', '1958-04-05', '1958-04-12', '1958-04-19',\n",
+       "               '1958-04-26', '1958-05-03', '1958-05-10', '1958-05-17',\n",
+       "               '1958-05-24', '1958-05-31',\n",
+       "               ...\n",
+       "               '2001-10-27', '2001-11-03', '2001-11-10', '2001-11-17',\n",
+       "               '2001-11-24', '2001-12-01', '2001-12-08', '2001-12-15',\n",
+       "               '2001-12-22', '2001-12-29'],\n",
+       "              dtype='datetime64[ns]', name='date', length=2284, freq='W-SAT')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Confirm that date values are used for indexing purpose in the CO2 dataset \n",
-    "\n",
+    "CO2.index\n",
     "# DatetimeIndex(['1958-03-29', '1958-04-05', '1958-04-12', '1958-04-19',\n",
     "#                '1958-04-26', '1958-05-03', '1958-05-10', '1958-05-17',\n",
     "#                '1958-05-24', '1958-05-31',\n",
@@ -167,15 +291,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>co2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1958-03-01</th>\n",
+       "      <td>316.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-04-01</th>\n",
+       "      <td>317.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-05-01</th>\n",
+       "      <td>317.433333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-06-01</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-07-01</th>\n",
+       "      <td>315.625000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-08-01</th>\n",
+       "      <td>314.950000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-09-01</th>\n",
+       "      <td>313.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-10-01</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-11-01</th>\n",
+       "      <td>313.425000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958-12-01</th>\n",
+       "      <td>314.700000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   co2\n",
+       "date                  \n",
+       "1958-03-01  316.100000\n",
+       "1958-04-01  317.200000\n",
+       "1958-05-01  317.433333\n",
+       "1958-06-01         NaN\n",
+       "1958-07-01  315.625000\n",
+       "1958-08-01  314.950000\n",
+       "1958-09-01  313.500000\n",
+       "1958-10-01         NaN\n",
+       "1958-11-01  313.425000\n",
+       "1958-12-01  314.700000"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Group the timeseries into monthly buckets\n",
     "# Take the mean of each group \n",
     "# get the first 10 elements of resulting timeseries\n",
     "\n",
-    "\n",
+    "month_avg_df = CO2.resample(\"MS\").mean()\n",
+    "month_avg_df.head(10)\n",
     "# 1958-03-01    316.100000\n",
     "# 1958-04-01    317.200000\n",
     "# 1958-05-01    317.433333\n",
@@ -202,11 +420,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>co2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1990-01-01</th>\n",
+       "      <td>353.650</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1990-02-01</th>\n",
+       "      <td>354.650</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1990-03-01</th>\n",
+       "      <td>355.480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1990-04-01</th>\n",
+       "      <td>356.175</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1990-05-01</th>\n",
+       "      <td>357.075</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                co2\n",
+       "date               \n",
+       "1990-01-01  353.650\n",
+       "1990-02-01  354.650\n",
+       "1990-03-01  355.480\n",
+       "1990-04-01  356.175\n",
+       "1990-05-01  357.075"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Slice the timeseries to contain data after year 1990. \n",
+    "\n",
+    "month_avg_df['1990':].head()\n",
     "\n",
     "# 1990-01-01    353.650\n",
     "# 1990-02-01    354.650\n",
@@ -225,11 +513,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>co2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1990-01-01</th>\n",
+       "      <td>353.650</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1990-02-01</th>\n",
+       "      <td>354.650</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1990-03-01</th>\n",
+       "      <td>355.480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1990-04-01</th>\n",
+       "      <td>356.175</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1990-05-01</th>\n",
+       "      <td>357.075</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1990-06-01</th>\n",
+       "      <td>356.080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1990-07-01</th>\n",
+       "      <td>354.675</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1990-08-01</th>\n",
+       "      <td>352.900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1990-09-01</th>\n",
+       "      <td>350.940</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1990-10-01</th>\n",
+       "      <td>351.225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1990-11-01</th>\n",
+       "      <td>352.700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1990-12-01</th>\n",
+       "      <td>354.140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1991-01-01</th>\n",
+       "      <td>354.675</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                co2\n",
+       "date               \n",
+       "1990-01-01  353.650\n",
+       "1990-02-01  354.650\n",
+       "1990-03-01  355.480\n",
+       "1990-04-01  356.175\n",
+       "1990-05-01  357.075\n",
+       "1990-06-01  356.080\n",
+       "1990-07-01  354.675\n",
+       "1990-08-01  352.900\n",
+       "1990-09-01  350.940\n",
+       "1990-10-01  351.225\n",
+       "1990-11-01  352.700\n",
+       "1990-12-01  354.140\n",
+       "1991-01-01  354.675"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Retrieve the data between 1st Jan 1990 to 1st Jan 1991\n",
+    "\n",
+    "month_avg_df['1990-01':'1991-01']\n",
     "\n",
     "# 1990-01-01    353.650\n",
     "# 1990-02-01    354.650\n",
@@ -258,12 +656,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "co2    5\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Get the total number of missing values in the time series\n",
-    "\n",
+    "month_avg_df.isna().sum()\n",
     "# 5"
    ]
   },
@@ -276,13 +686,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "co2    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# perform backward filling of missing values\n",
     "# check again for missing values\n",
-    "\n",
+    "month_avg_df.bfill(inplace=True)\n",
+    "month_avg_df.isna().sum()\n",
     "# 0"
    ]
   },
@@ -300,9 +723,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
